Adding Android Library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     })
 
     testImplementation 'junit:junit:4.12'
+    compile project(':jokelib')
+    compile project(':jokeviewer')
+
 }
