--- a/jokeviewer/src/main/AndroidManifest.xml
+++ b/jokeviewer/src/main/AndroidManifest.xml
@@ -1,2 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.jokeviewer"/>
+          package="com.example.jokeviewer">
+
+    <application>
+        <activity
+            android:name=".Viewer"
+            android:label="@string/title_activity_viewer"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+    </application>
+
+</manifest>
