--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,15 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    compile 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+
+
     testImplementation 'junit:junit:4.12'
-    compile project(':jokelib')
     compile project(':jokeviewer')
 
 }
